feat: integrate OpenAPI/Swagger UI (springdoc-openapi)
- Add springdoc-openapi-starter-webmvc-ui 2.8.5 dependency
- Create OpenApiConfig with API info and JWT bearer security scheme
- Permit Swagger UI paths in SecurityConfig
- Annotate all 11 controllers with @Tag and @Operation
- Swagger UI available at /swagger-ui.html

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -15,6 +15,16 @@ management:
       exposure:
         include: health,info,metrics
 
+springdoc:
+  api-docs:
+    path: /v3/api-docs
+  swagger-ui:
+    path: /swagger-ui.html
+    operations-sorter: method
+    tags-sorter: alpha
+    doc-expansion: none
+  default-produces-media-type: application/json
+
 app:
   jwt:
     secret: ${JWT_SECRET}
